Fixed bug on color panel selection not showing

--- a/src/client/ReportPage.module.css
+++ b/src/client/ReportPage.module.css
@@ -135,9 +135,6 @@
 .keplerBlock :global #kepler-gl__kepler .side-panel__header__top {
     display: none;
 }
-.keplerBlock :global #kepler-gl__kepler .color-select__input-group {
-    display: none;
-}
 
 .keplerBlock :global #kepler-gl__kepler .add-data-button {
     display: none;
